Web Inspector: Styles Redesign: selector's field shadow is clipped at the bottom https://bugs.webkit.org/show_bug.cgi?id=179961
Reviewed by Matt Baker.

* UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.css:
(.spreadsheet-css-declaration .selector):


Canonical link: https://commits.webkit.org/196026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225165 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationSection.css
@@ -82,6 +82,7 @@
 
 .spreadsheet-css-declaration .selector {
     position: relative;
+    z-index: 1;
 }
 
 .spreadsheet-css-declaration .selector.style-attribute {
